# staqtapp-tds

./: AUDIT_REMEDIATION_STATUS.txt  CHANGELOG.md  DEV10_CONTROLLED_ACTIVATION_STATUS.txt  DEV11_RELEASE_QUALIFICATION_STATUS.txt  DEV6_GUARANTEED_STORAGE_TRANSITION_STATUS.txt  DEV7_MATERIALIZATION_FAULT_QUALIFICATION_STATUS.txt  DEV8_VERIFIED_ROUND_TRIP_MIGRATION_STATUS.txt  DEV9_INCREMENTAL_IMMUTABLE_SEGMENTS_STATUS.txt  LICENSE  MANIFEST.in  README.ja.md  README.md  README_ja.md  V275_FIX_VERIFICATION.txt  V353_POST1_PYPI_PRESENTATION_STATUS.txt  pyproject.toml  setup.py  sqtp-tds-fixed-list.txt  tds_filesystem.py  tds_persistence.py
benchmarks/: benchmark_v331_csv_scan.py  benchmark_v332_csv_row_anchors.py
docs/: 01_Architecture.md  100_v336_CSV_Storage_Bridge_Preflight.md  101_v337_CSV_Storage_Bridge_Commit_Manifest.md  102_v338_CSV_Storage_Adapter_Binding_Contract.md  103_v339_CSV_Storage_Adapter_Commit_Replay.md  104_v340_CSV_Native_Storage_Integration_Beginning.md  105_v346_CSV_Native_Scan_Kernel_Prototype.md  106_v3411_CSV_Suite_Closure_Semantic_IR_Handoff.md  107_v351_Semantic_IR_Lifecycle_Transition_Contract.md  108_v352_Semantic_IR_Atomic_Batch_Review_Contract.md  109_v352_Single_Process_Test_Investigation.md  110_v353_Atomic_Generation_Persistence_Contract.md  110_v353_dev2_Immutable_Generation_Prototype.md  111_v353_dev3_Destructive_Fault_Qualification.md  112_v353_dev5_Retention_Pinning_Restartable_Cleanup.md  113_v353_dev51_Buffer_Streaming_Hardening.md  114_v353_dev51_Test_Evidence.md  115_v353_dev8_Verified_Round_Trip_Migration.md  116_v353_dev9_Incremental_Immutable_Segments.md  117_v353_dev9_Test_Evidence.md  118_v353_dev10_Controlled_Activation.md  119_v353_dev11_Release_Qualification.md  22_Professional_Dashboard.md  23_Spiral_Trace_Support.md  24_Native_Execution_Telemetry.md  25_Metadata_Native_Hardening.md  26_Hardening_Telemetry.md  29_v261_JSON_GIL_Hardening.md  30_v271_Transition_Ring_Diagnostics.md  31_v272_Pressure_Calculations_Engine.md  32_v273_Dashboard_Console_Redesign.md  33_v274_Recovery_Planner.md  34_v278_Browser_Settings.md  35_v279_Browser_Telemetry_Pages.md  36_v280_Browser_Language_Packs.md  37_v281_Admin_Security_Hotfix.md  38_v287_Native_Spiral_Rank_Engine.md  39_v288_Spiral_Rank_Stats.md  40_v289_Spiral_Rank_Browser_Telemetry.md  41_v290_JSON_Performance_Codec.md  (+58 more)
examples/: srz_manifest_example.py
media/: m_cfg.txt
scripts/: capture_browser_pages.cjs  check_release.py  run_release_tests.py  serve_browser_release_snapshot.py  verify_pypi_presentation.py
staqtapp_tds/: tds_filesystem.py
tds_api_docs/: README.md
tests/: test_pypi_audit_regressions.py  test_storage_engine_hardening_pre_cvs.py  test_v172_variables_text.py  test_v173_storage_invariants.py  test_v17_semantic_infra.py  test_v180_native_provenance_cluster.py  test_v210_perf_seams.py  test_v220_admin_panel.py  test_v230_observability.py  (+106 more)
(+144 files in other folders)
