[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staqtapp-tds"
version = "2.1.0"
description = "Staqtapp-TDS Temporal Directory System VFS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
fast = ["numba>=0.58"]
test = ["pytest>=7"]
native = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
